--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://images.pexels.com/photos/349610/pexels-photo-349610.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+   background-attachment: fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+
 }
 
 code {
